# ed_project_store

./: catalog.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_is_published_blog_slug_blog_views_count.py  0003_blog_image.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/managment/command/: fill.py
catalog/migrations/: 0001_initial.py  0002_version.py  0003_product_owner.py  0004_alter_product_options_product_is_published.py
catalog/templates/: base.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: recovery_form.html  user_form.html
