[tool.poetry]
name = "ed-project-store"
version = "0.1.0"
description = ""
authors = ["Helen Prilutskaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.27.0"
pytils = "^0.4.1"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
